RESOLVED FIXED119258
[WebKit2] [Gtk] WebKitResponsePolicyDecision URI response property incorrect
https://bugs.webkit.org/show_bug.cgi?id=119258
Summary [WebKit2] [Gtk] WebKitResponsePolicyDecision URI response property incorrect
Brian Holt
Reported 2013-07-30 07:28:26 PDT
g_object_class_install_property(objectClass, PROP_REQUEST, g_param_spec_object("response", _("URI response"), _("The URI response that is associated with this policy decision"), WEBKIT_TYPE_URI_REQUEST, WEBKIT_PARAM_READABLE));
Attachments
Patch (3.00 KB, patch)
2013-07-30 07:44 PDT, Brian Holt
no flags
Patch (3.01 KB, patch)
2013-07-30 07:52 PDT, Brian Holt
no flags
Updated Patch (3.12 KB, patch)
2013-07-30 08:18 PDT, Brian Holt
no flags
Updated Patch (3.12 KB, patch)
2013-07-30 08:27 PDT, Brian Holt
no flags
Brian Holt
Comment 1 2013-07-30 07:44:34 PDT
WebKit Commit Bot
Comment 2 2013-07-30 07:47:21 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Brian Holt
Comment 3 2013-07-30 07:50:37 PDT
Comment on attachment 207736 [details] Patch Cancelling review: in eclipse I couldn't see the _ that preceded the parentheses. Apologies.
Brian Holt
Comment 4 2013-07-30 07:52:40 PDT
Brian Holt
Comment 5 2013-07-30 08:03:49 PDT
Comment on attachment 207737 [details] Patch Thanks for the review! Setting CQ?
Carlos Garcia Campos
Comment 6 2013-07-30 08:04:42 PDT
Comment on attachment 207737 [details] Patch What was wrong here? just the coding style?
Carlos Garcia Campos
Comment 7 2013-07-30 08:06:47 PDT
Comment on attachment 207737 [details] Patch Ah I see we were using WEBKIT_TYPE_URI_REQUEST instead of WEBKIT_TYPE_URI_RESPONSE, the change was hidden in the conding style "fixes". Please explain what you are fixing in the changelog before landing this.
Brian Holt
Comment 8 2013-07-30 08:13:28 PDT
(In reply to comment #7) > (From update of attachment 207737 [details]) > Ah I see we were using WEBKIT_TYPE_URI_REQUEST instead of WEBKIT_TYPE_URI_RESPONSE, the change was hidden in the conding style "fixes". Please explain what you are fixing in the changelog before landing this. Sorry Carlos, I though my comment in the changeLog "Corrected the installed URI response property" was sufficient but I'll expand on that a bit more. Its definitely not just a style change :-)
Brian Holt
Comment 9 2013-07-30 08:18:24 PDT
Created attachment 207738 [details] Updated Patch
Carlos Garcia Campos
Comment 10 2013-07-30 08:20:50 PDT
(In reply to comment #8) > (In reply to comment #7) > > (From update of attachment 207737 [details] [details]) > > Ah I see we were using WEBKIT_TYPE_URI_REQUEST instead of WEBKIT_TYPE_URI_RESPONSE, the change was hidden in the conding style "fixes". Please explain what you are fixing in the changelog before landing this. > > Sorry Carlos, I though my comment in the changeLog "Corrected the installed URI response property" was sufficient but I'll expand on that a bit more. Its definitely not just a style change :-) That says there's something wrong, but not what, it took me a while to find what was wrong. Thanks for updating it.
Carlos Garcia Campos
Comment 11 2013-07-30 08:22:39 PDT
(In reply to comment #9) > Created an attachment (id=207738) [details] > Updated Patch When submitting an updated patch that has already been r+'ed, you can upload the patch with the reviewer line filled, and only ask for commit-queue. Note that I didn't r- the patch, just cq-.
Brian Holt
Comment 12 2013-07-30 08:27:38 PDT
Created attachment 207739 [details] Updated Patch
Carlos Garcia Campos
Comment 13 2013-07-30 08:35:36 PDT
Comment on attachment 207739 [details] Updated Patch Excellent, thanks!
Martin Robinson
Comment 14 2013-07-30 08:47:18 PDT
Thanks for pointing that out Carlos. It took me a moment to find the actual issue. And thanks Brian for fixing it. :)
WebKit Commit Bot
Comment 15 2013-07-30 10:29:42 PDT
Comment on attachment 207739 [details] Updated Patch Clearing flags on attachment: 207739 Committed r153479: <http://trac.webkit.org/changeset/153479>
WebKit Commit Bot
Comment 16 2013-07-30 10:29:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.