[WebKit2] [Gtk] WebKitResponsePolicyDecision URI response property incorrect https://bugs.webkit.org/show_bug.cgi?id=119258

Patch by Brian Holt <brian.holt@samsung.com> on 2013-07-30
Reviewed by Martin Robinson.

Corrected the installed URI response property from PROP_REQUEST to
PROP_RESPONSE and type from WEBKIT_TYPE_URI_REQUEST to
WEBKIT_TYPE_URI_RESPONSE.

* UIProcess/API/gtk/WebKitResponsePolicyDecision.cpp:
(webkit_response_policy_decision_class_init):

Canonical link: https://commits.webkit.org/137244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153479 268f45cc-cd09-0410-ab3c-d52691b4dbfc