Source/WebKit2/UIProcess/API/gtk/WebKitResponsePolicyDecision.cpp
@@ -86,12 +86,12 @@ static void webkit_response_policy_decision_class_init(WebKitResponsePolicyDecis
      * policy decision.
      */
     g_object_class_install_property(objectClass,
-                                    PROP_REQUEST,
-                                    g_param_spec_object("request",
-                                                      _("Response URI request"),
-                                                      _("The URI request that is associated with this policy decision"),
-                                                      WEBKIT_TYPE_URI_REQUEST,
-                                                      WEBKIT_PARAM_READABLE));
+        PROP_REQUEST,
+        g_param_spec_object("request",
+            _("Response URI request"),
+            _("The URI request that is associated with this policy decision"),
+            WEBKIT_TYPE_URI_REQUEST,
+            WEBKIT_PARAM_READABLE));
 
     /**
      * WebKitResponsePolicyDecision:response:
@@ -100,12 +100,12 @@ static void webkit_response_policy_decision_class_init(WebKitResponsePolicyDecis
      * policy decision.
      */
     g_object_class_install_property(objectClass,
-                                    PROP_REQUEST,
-                                    g_param_spec_object("response",
-                                                      _("URI response"),
-                                                      _("The URI response that is associated with this policy decision"),
-                                                      WEBKIT_TYPE_URI_REQUEST,
-                                                      WEBKIT_PARAM_READABLE));
+        PROP_RESPONSE,
+        g_param_spec_object("response",
+            _("URI response"),
+            _("The URI response that is associated with this policy decision"),
+            WEBKIT_TYPE_URI_RESPONSE,
+            WEBKIT_PARAM_READABLE));
 
 }
 
